src/test/deca/codegen/valid/castInt.deca
//
//
//
//
// 1
//

{
    float y = 1.0;
    int x = (int)(y);
    print(x);
}