src/test/deca/codegen/invalid/DivZeroIntVar.deca
// Description:
//    Erreur du 11.1 : Division entière par zéro
//
// Resultats:
// Error: zero_division

{
    int num = 1;
    int denom = 0;
    int res = num / denom;
}
